@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/04/11
+	* Now when an object changes speed, the old move-packet will be used on the
+	  next movement, which should update the object's speed from that point and
+	  on-wards. This is done since there appears to be no way to tell the client
+	  a given object's speed has changed.
 	* Modified spirit of Wizard so that the consumption of 'Fragments' when
 	  blocking bounced spells will only consume 1 Fragment per skill casted,
 	  regardless of how many hits were reflected.
